# seastar

./: .gitignore  SEASTAR_ENV_BUILD_DEBUG_GUIDE.md  build_debug.sh  build_release.sh  download_boost_1_83_0.sh  install_boost_1_83_0.sh
.comate/specs/phase2-remaining/: doc.md  summary.md  tasks.md
.comate/specs/phase3-ctp-bridge/: doc.md  tasks.md
.comate/specs/phase4-strategy-backtest/: COMPLETION-20260713-PHASE4-000001.md
.comate/specs/phase5-data-redis/: COMPLETION-20260714-PHASE5-000001.md
.github/skills/xtrader-build/: SKILL.md
apps/: CMakeLists.txt
apps/xtrader/: CMakeLists.txt  version.hh.in  xtrader_cli.cc  xtrader_demo.cc
doc/: Seastar_Xtrader_测试2与测试3条件说明_2026-07-08.md  virtualbox_debug_checklist.md
docs/: cloud-k-build-release-20260717.md  data_import_guide.md  xtrader_debug_guide.md
include/seastar/xtrader/: backtest_driver.hh  ctp_adapter.hh  ctp_gateway.hh  ctp_spi_adapter.hh  data_importer.hh  domain_types.hh  event_bus.hh  health_check.hh  historical_data_manager.hh  order_intent.hh  pending_order_manager.hh  performance_metrics.hh  redis_metadata.hh  redis_sync_client.hh  runtime_engine.hh  runtime_sharded.hh  spsc_ring_buffer.hh  strategy_base.hh  strategy_lifecycle.hh  subscription_registry.hh  trading_account_service.hh  web_api_handler.hh
ops/lowmem/: 00_common.sh  01_probe_env.sh  02_install_base_deps.sh  03_verify_boost_fmt.sh  04_configure_debug.sh  05_build_debug_lowmem.sh  06_smoke_run_cli.sh  README.md
scripts/: UpdateGCCtoVersion13.sh
src/xtrader/: backtest_driver.cc  ctp_adapter.cc  ctp_gateway.cc  ctp_spi_adapter.cc  data_importer.cc  domain_types.cc  event_bus.cc  health_check.cc  historical_data_manager.cc  order_intent.cc  pending_order_manager.cc  performance_metrics.cc  redis_metadata.cc  redis_sync_client.cc  runtime_engine.cc  runtime_sharded.cc  strategy_base.cc  strategy_lifecycle.cc  subscription_registry.cc  web_api_handler.cc
tests/unit/: CMakeLists.txt  xtrader_domain_test.cc  xtrader_historical_data_manager_test.cc  xtrader_phase4_minimal_test.cc  xtrader_runtime_sharded_test.cc
tools/: ssh_transfer_menu.py
